Implemented simpler API

--- a/src/samples/ConsoleApp/ConsoleApp.csproj
+++ b/src/samples/ConsoleApp/ConsoleApp.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\ClassLibrary1\ClassLibrary1.csproj" />
     <ProjectReference Include="..\..\..\ClassLibrary2\ClassLibrary2.csproj" />
     <ProjectReference Include="..\..\Calamity\Calamity.csproj" />
   </ItemGroup>
