--- a/src/Calamity/Calamity.csproj
+++ b/src/Calamity/Calamity.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <Authors>Daniel Belz</Authors>
     <Company>Daniel Belz</Company>
     <Copyright>2021 Daniel Belz</Copyright>
@@ -12,9 +12,17 @@
     <RepositoryType>git</RepositoryType>
     <Description>A (mini) plugin framework for .NET</Description>
 
-	<DebugType>portable</DebugType>
-	<DebugSymbols>true</DebugSymbols>
+	  <DebugType>portable</DebugType>
+	  <DebugSymbols>true</DebugSymbols>
+
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <InternalsVisibleTo Include="Calamity.Extensions.DependencyInjection" />
+    <InternalsVisibleTo Include="Calamity.Extensions.Hosting" />
+  </ItemGroup>
 
   <PropertyGroup Label="SourceLink">
 	  <PublishRepositoryUrl>true</PublishRepositoryUrl>
@@ -27,8 +35,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0">
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
