--- a/src/samples/ConsoleApp/ConsoleApp.csproj
+++ b/src/samples/ConsoleApp/ConsoleApp.csproj
@@ -2,16 +2,17 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\ClassLibrary1\ClassLibrary1.csproj" />
     <ProjectReference Include="..\..\..\ClassLibrary2\ClassLibrary2.csproj" />
+    <ProjectReference Include="..\..\Calamity.Extensions.Hosting\Calamity.Extensions.Hosting.csproj" />
     <ProjectReference Include="..\..\Calamity\Calamity.csproj" />
   </ItemGroup>
 
