--- a/src/Calamity.Abstractions/Calamity.Abstractions.csproj
+++ b/src/Calamity.Abstractions/Calamity.Abstractions.csproj
@@ -14,6 +14,14 @@
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/LegendaryB/Calamity</RepositoryUrl>
     <RootNamespace>$(SolutionName.Replace(" ", "_"))</RootNamespace>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Update="README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
 </Project>
